<resources>
    <string name="app_name">예흔 공동체</string>
    <string name="description">description</string>

    <!-- App package -->
    <string name="app_open">사용할 앱 선택</string>
    <string name="youtube_package">com.google.android.youtube</string>
    <string name="instagram_package">com.instagram.android</string>
    <string name="venmo_url"> https://play.google.com/store/apps/details?id=com.venmo</string>
    <string name="android_vending_package">com.android.vending</string>

    <!-- Website address -->
    <string name="lolmc_youtube">https://www.youtube.com/channel/UCp2jghiPhBoCMqevRyUyOUQ</string>
    <string name="lolmc_instagram">https://www.instagram.com/lolmc_themarks/</string>

    <!-- Global Variable -->
    <string name="lolmc">사랑의 빛 선교교회</string>
    <string name="title">예흔 공동체</string>
    <string name="default_web_client_id_" translatable="false">681514188503-gbno2c0uiqe77i15vducnaig9h806b3k.apps.googleusercontent.com</string>

    <!-- Permission -->
    <string name="permission_grant">접근 권한이 허용되었습니다</string>
    <string name="permission_request">접근 권한을 허용해주세요</string>
    <string name="permission_setting">[설정]> [권한]에서 권한을 허용할 수 있어요</string>

    <!-- Main Activity -->
    <string name="main_title">사랑의 빛 선교교회 청년부</string>
    <string name="main_content">예배와 찬양, 나눔과 섬김의 자리에\n여러분을 초대합니다.</string>
    <string name="main_signin">로그인</string>
    <string name="main_signin_fail">로그인에 실패하였습니다\n다시 시도해 주세요</string>
    <string name="main_signin_google">구글 계정에 먼저 로그인 해 주세요</string>

    <!-- SubMain Activity -->
    <string name="submain_worship">예배</string>
    <string name="submain_bulletin">주보</string>
    <string name="submain_register">신청서</string>
    <string name="submain_offering">헌금</string>
    <string name="submain_goods">예흔 굿즈</string>
    <string name="submain_notice">공지사항</string>
    <string name="submain_bulletin_fail">예상하지 못한 오류가 발생했습니다\n잠시 후 다시 시도해주세요</string>
    <string name="submain_bulletin_empy">현재 이용가능한 주보가 없습니다\n잠시 후 다시 시도해주세요</string>
    <string name="submain_googleform_fail">예상하지 못한 오류가 발생했습니다\n잠시 후 다시 시도해주세요</string>
    <string name="submain_googleform_empy">현재 이용가능한 신청서가 없습니다\n잠시 후 다시 시도해주세요</string>

    <!-- Worship Activity -->
    <string name="worship1">예배 및 모임 안내</string>
    <string name="worship2">주일예배</string>
    <string name="worship3">매주 오후 2시</string>
    <string name="worship4">금요 영성 집회</string>
    <string name="worship5">매주 오후 7시 45분\n교회 본당</string>
    <string name="meeting1">목장모임</string>
    <string name="meeting2">예배 후 교회에서</string>
    <string name="location1">주소 및</string>
    <string name="location2">2801 E. Colorado Blvd.Pasadena, CA 91107</string>
    <string name="contact">Tel. (626) 744–9191</string>
    <string name="facility">시설 안내</string>

    <!-- Offering Activity -->
    <string name="offering">온라인 헌금 Venmo 안내</string>
    <string name="offering_qr">QR 코드</string>
    <string name="offering_content">반드시 Venmo 내용에 "이름"과 "헌금"이라고 적어주세요</string>
    <string name="offering_id">Venmo ID</string>
    <string name="offering_link">Venmo 앱 설치</string>
    <string name="offering_noqr">현재 이용가능한 QR 코드가 없습니다</string>
    <string name="offering_expand">펼치기</string>
    <string name="offering_collapse">접기</string>

    <!-- Facility Activity -->
    <string name="facilityMap">교회 시설</string>

    <!-- Login Activity -->
    <string name="login">로그인</string>
    <string name="login_password">비밀번호</string>
    <string name="login_password_empty">비밀번호를 입력하세요</string>
    <string name="login_password_error">비밀번호가 맞지 않습니다.\n다시 확인주세요</string>

    <!-- Edit Activity -->
    <string name="edit_url">주보 / 신청서</string>
    <string name="edit_offering">헌금</string>
    <string name="edit_goods">예흔 굿즈</string>
    <string name="edit_notice">공지사항</string>

    <!-- Noticeedit Activity -->
    <string name="deleted">파일이 삭제되었습니다</string>

    <!-- Urlupload Activity -->
    <string name="urlupload_bulletin">주보 URL</string>
    <string name="urlupload_googleform">신청서 URL</string>
    <string name="upload">업로드</string>
    <string name="urlupload_empty">링크를 입력해주세요</string>
    <string name="uploaded">업로드가 완료되었습니다</string>

    <!-- Goodsupload Activity -->
    <string name="goodsupload_name">상품명을 입력해주세요</string>
    <string name="goodsupload_price">가격을 입력해주세요</string>
    <string name="goodsupload_quantity">수량을 입력해주세요</string>
    <string name="goodsupload_image">이미지를 선택해주세요</string>

    <!-- Noticeupload Activity -->
    <string name="noticeupload_name">제목을 입력해주세요</string>
    <string name="noticeupload_content">내용을 입력해주세요</string>

    <!-- Goods View -->
    <string name="goods_title">굿즈</string>
    <string name="goods_name">품명</string>
    <string name="goods_price">가격</string>
    <string name="goods_quantity">수량</string>
    <string name="goods_quantity2">수량</string>

    <!-- Notice View -->
    <string name="notice_title">공지사항</string>
    <string name="notice_content">내용</string>
    <string name="notice_date">날짜</string>

    <!-- Bottom menu -->
    <string name="bot_youtube">Youtube</string>
    <string name="bot_instagram">Instagram</string>

    <!-- Navigation -->
    <string name="menu_access">Access Restricted</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_upload">Upload</string>
    <string name="menu_logout">Logout</string>
</resources>